# apps/auth-service/src/routes/auth.router.ts
@@ -1,10 +1,14 @@
 import { Router } from "express";
-import { loginUser, userRegistration, verifyUser } from "../controller/auth.controller";
+import { loginUser, resetUserPassword, forgotUserPassword, userRegistration, verifyUser, verifyUserForgotPassword } from "../controller/auth.controller";
+
 
 const router = Router()
 
 router.post('/user-registration', userRegistration)
 router.post('/verify-user', verifyUser)
 router.post('/login-user', loginUser)
+router.post('/forgot-password-user', forgotUserPassword)
+router.post('/verify-forgot-password-user', verifyUserForgotPassword)
+router.post('/reset-password-user', resetUserPassword)
 
 export default router
